# CPP-Starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
tests/: CMakeLists.txt  tests.cpp
